suppression des anciens tests opengl

--- a/tests/opengl-tests/Makefile
+++ b/tests/opengl-tests/Makefile
@@ -6,7 +6,8 @@ SRC = $(LIBS_DIR)/src
 LIBS_PATH = -I$(INCLUDE) -L$(LIB)
 LIBS = -lglfw3 -lopengl32 -lgdi32
 
-SOURCES = test005.cpp $(SRC)/glad.c
+SOURCES = test007.cpp Shader.cpp litequarks/LQWindow.cpp\
+		  litequarks/LQTexture.cpp $(SRC)/glad.c
 
 all:
-	g++ $(SOURCES) -o main $(LIBS_PATH) $(LIBS)
+	g++ $(SOURCES) -o main $(LIBS_PATH) $(LIBS) -Wfatal-errors
