--- a/.gitignore
+++ b/.gitignore
@@ -31,10 +31,6 @@
 *.out
 *.app
 
-#Fichier Tests
-test/asyncio-tests/Client/FileTest.py
-test/asyncio-tests/Serveur/FileTest.py
-test/asyncio-tests/Simulation_BD
-test/asyncio-tests/c.py
-test/asyncio-tests/s.py
-test/asyncio-tests/test.py
+# Test files
+tests/unit-tests
+src/litequarks/obj
