correction makefile & include

--- a/src/app/Makefile
+++ b/src/app/Makefile
@@ -21,7 +21,7 @@ all: $(OBJ)
 	$(CXX) $^ -o main $(LIBS_FLAGS)
 
 main.o: main.cpp
-	g++ $(CXXFLAGS) -c $< -o $@ $(LIBS_FLAGS)
+	$(CXX) $(CXXFLAGS) -c $< -o $@ $(LIBS_FLAGS)
 
 $(LQ_DIR)/obj/%.o: $(LQ_DIR)/src/%.cpp
 	$(CXX) $(CXXFLAGS) -c $< -o $@ $(LIBS_FLAGS)
@@ -29,5 +29,4 @@ $(LQ_DIR)/obj/%.o: $(LQ_DIR)/src/%.cpp
 $(SRC_DIR)/%.o: $(SRC_DIR)/%.c
 	$(CXX) $(CXXFLAGS) -c $< -o $@ $(LIBS_FLAGS)
 
--include $(SRC_DIR:.o=.d)
--include $(LQ_DIR/obj:.o=.d)
+include $(OBJ:.o=.d)
