préparation à la compilation statique sur Windows

--- a/src/app/Makefile
+++ b/src/app/Makefile
@@ -1,12 +1,16 @@
 CXX = g++
-CXXFLAGS = -Wall -Wfatal-errors -MMD
+# dynamic compilation
+# CXXFLAGS = -Wall -Wfatal-errors -MMD
+# static compilation
+CXXFLAGS = -Wall -Wfatal-errors -MMD -static -mwindows
 
-LIBS_DIR = D:/Travail/Projets/libs
+LIBS_DIR = C:/Users/valfv/libs
 INCLUDE_DIR = $(LIBS_DIR)/include
 LIB_DIR = $(LIBS_DIR)/lib
 SRC_DIR = $(LIBS_DIR)/src
 
-PYTHON_PATH = C:/Users/paulb/AppData/Local/Programs/Python/Python38
+# replace the path below with your python38 path
+PYTHON_PATH = C:/Users/valfv/AppData/Local/Programs/Python/Python38
 PYTHON_INCLUDE = $(PYTHON_PATH)/include
 PYTHON_LIBS = $(PYTHON_PATH)/libs
 
@@ -27,7 +31,7 @@ LIBS_FLAGS = $(LIBS_PATH) $(LIBS)
 OBJ = $(PN_OBJ) $(LQ_OBJ) $(SRC_DIR)/glad.o
 
 all: $(OBJ)
-	$(CXX) $^ -o main $(LIBS_FLAGS)
+	$(CXX) $(CXXFLAGS) $^ -o main $(LIBS_FLAGS)
 
 %.o: %.cpp
 	$(CXX) $(CXXFLAGS) -c $< -o $@ $(LIBS_FLAGS)
