--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@
 # Compiled Dynamic libraries
 *.so
 *.dylib
-*.dll
+# *.dll
 
 # Fortran module files
 *.mod
@@ -27,11 +27,10 @@
 *.lib
 
 # Executables
-*.exe
+# *.exe
 *.out
 *.app
 
 # Test files
 tests/*
 src/litequarks/obj/
-src/app/Makefile
